<resources>
    <string name="app_name">fizzbuzz</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="placeholder_int_1">Int 1</string>
    <string name="placeholder_int_2">Int 2</string>
    <string name="placeholder_limit">Limit</string>
    <string name="placeholder_string_1">String 1</string>
    <string name="placeholder_string_2">String 2</string>
</resources>