<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.fragment.FormFragment">

    <LinearLayout
        android:id="@+id/ll_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_40sdp"
        android:orientation="horizontal"
        android:weightSum="3">

        <EditText
            android:id="@+id/et_int_1"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:hint="@string/placeholder_int_1"
            android:inputType="number"
            android:autofillHints="@string/placeholder_int_1"/>

        <EditText
            android:id="@+id/et_int_2"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:hint="@string/placeholder_int_2"
            android:inputType="number"
            android:autofillHints="@string/placeholder_int_2" />

        <EditText
            android:id="@+id/et_limit"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:hint="@string/placeholder_limit"
            android:inputType="number"
            android:autofillHints="@string/placeholder_limit"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_number"
        android:layout_marginTop="@dimen/_40sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <EditText
            android:id="@+id/et_string_1"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:hint="@string/placeholder_string_1"
            android:inputType="text"
            android:autofillHints="@string/placeholder_string_1"/>

        <EditText
            android:id="@+id/et_string_2"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:hint="@string/placeholder_string_2"
            android:inputType="text"
            android:autofillHints="@string/placeholder_string_2"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintTop_toBottomOf="@id/ll_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_40sdp"/>
</androidx.constraintlayout.widget.ConstraintLayout>